--- a/src/pages/shopping-list/shopping-list.html
+++ b/src/pages/shopping-list/shopping-list.html
@@ -8,8 +8,14 @@
       </button>
     </ion-buttons>
 
+    <ion-buttons end>
+      <button ion-buttoon icon-only (click)="onShowOptions($event)">
+        <ion-icon name="more"></ion-icon>
+      </button>
+    </ion-buttons>
+
     <ion-title>Shopping List</ion-title>
-    
+
   </ion-navbar>
 
 </ion-header>
